omq-zeromq/tests/trybuild/compat-fail/socket_trait_backend.stderr
warning: unused import: `Socket`
 --> tests/trybuild/compat-fail/socket_trait_backend.rs:1:26
  |
1 | use zeromq::{PushSocket, Socket};
  |                          ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `backend` found for reference `&PushSocket` in the current scope
 --> tests/trybuild/compat-fail/socket_trait_backend.rs:4:20
  |
4 |     let _ = socket.backend();
  |                    ^^^^^^^ method not found in `&PushSocket`
